# HW10L20-Threads

./: .travis.yml  CMakeLists.txt  README.md
cmake/GetGitRevisionDescription/: GetGitRevisionDescription.cmake
include/: BaseThreadHandler.h  BaseThreadHandler_impl.h  ThreadSaver.h  baseHandler.h  bulk.h  commandManagar_impl.h  commandManager.h  global.h  handl.h  handl_impl.h  ihandler.h  loger.h  loger_impl.h  printHandler.h  printHandler_impl.h  threadComManager.h  threadComManager_impl.h  threadSaver.h  threadSaver_impl.h
src/: main.cpp
tests/: mainTest.cpp
